--- a/dashboard.html
+++ b/dashboard.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+    // Check if the device is mobile
+    if (window.innerWidth <= 768) {
+      window.location.href = 'mobiledashboard.html';
+    }
+  </script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Staff Portal - Dashboard</title>
@@ -36,18 +43,11 @@
         </ul>
       </li>
       <li><a href="#" data-content="dashboard">Dashboard</a></li>
-
-      <!-- Admin Menu, hidden initially -->
-      <li class="has-submenu admin-menu-icon" th:if="${allowedMenus.contains('Admin')}" style="display: none;">
-        <a href="#" id="adminMenuToggle"><img src="admin-icon.png" alt="Admin" style="height: 24px; vertical-align: middle;" /></a>
-        <ul class="submenu" id="admin-submenu">
-          <li class="hidden-menu" th:if="${allowedMenus.contains('HRD')}" style="display: none;"><a href="hrd.html">HRD</a></li>
-          <li class="hidden-menu" th:if="${allowedMenus.contains('Administration')}" style="display: none;"><a href="administration.html">Administration</a></li>
-          <li class="hidden-menu" th:if="${allowedMenus.contains('IT')}" style="display: none;"><a href="it.html">IT</a></li>
-          <li class="hidden-menu" th:if="${allowedMenus.contains('Maintenance')}" style="display: none;"><a href="maintenance.html">Maintenance</a></li>
-        </ul>
-      </li>
     </ul>
+    <div class="user-area">
+      <span id="user-email-display"></span>
+      <button class="logout-button" id="logout-btn">Logout</button>
+    </div>
   </nav>
 
   <!-- Page Titles -->
@@ -60,6 +60,14 @@
   <div class="content" id="main-content">
     <h2>Dashboard</h2>
     <p>This is the dashboard content.</p>
+  </div>
+
+  <!-- Modal Overlay for Detail Popup -->
+  <div class="modal-overlay" id="detailPopup">
+    <div class="modal">
+      <button class="close-btn">Close</button>
+      <div class="popup-content"></div>
+    </div>
   </div>
 
   <script src="dashboardsidebar.js"></script>
