--- a/dashboard.html
+++ b/dashboard.html
@@ -49,18 +49,18 @@
       </li>
 
       <!-- New Admin Menu -->
-      <li class="has-submenu">
-        <a href="#">Admin</a>
-        <ul class="submenu">
-          <li class="hidden-submenu"><a href="#" data-content="Administration">Administration</a></li>
-          <li class="hidden-submenu"><a href="#" data-content="HRD">HRD</a></li>
-          <li class="hidden-submenu"><a href="#" data-content="IT">IT</a></li>
-          <li class="hidden-submenu"><a href="#" data-content="Biomedical">Biomedical</a></li>
-          <li class="hidden-submenu"><a href="#" data-content="Maintenance">Maintenance</a></li>
-          <li class="hidden-submenu"><a href="#" data-content="General Store">General Store</a></li>
-          <li class="hidden-submenu"><a href="#" data-content="Pharmacy">Pharmacy</a></li>
-        </ul>
-      </li>
+     <li class="has-submenu" id="Admin">
+  <a href="#">Admin</a>
+  <ul class="submenu" id="admin-submenu">
+    <li class="submenu-item" id="Administration"><a href="Administration.html">Administration</a></li>
+    <li class="submenu-item" id="HRD"><a href="HRD.html">HRD</a></li>
+    <li class="submenu-item" id="IT"><a href="IT.html">IT</a></li>
+    <li class="submenu-item" id="Biomedical"><a href="Biomedical.html">Biomedical</a></li>
+    <li class="submenu-item" id="Maintenance"><a href="Maintenance.html">Maintenance</a></li>
+    <li class="submenu-item" id="Pharmacy"><a href="Pharmacy.html">Pharmacy</a></li>
+  </ul>
+</li>
+
 
       <li><a href="#" data-content="dashboard">Dashboard</a></li>
     </ul>
