--- a/dashboard.html
+++ b/dashboard.html
@@ -49,17 +49,18 @@
       </li>
 
       <!-- New Admin Menu -->
-     <li class="has-submenu" id="Admin">
+     <li class="has-submenu">
   <a href="#">Admin</a>
-  <ul class="submenu" id="admin-submenu">
-    <li class="submenu-item" id="Administration"><a href="Administration.html">Administration</a></li>
-    <li class="submenu-item" id="HRD"><a href="HRD.html">HRD</a></li>
-    <li class="submenu-item" id="IT"><a href="IT.html">IT</a></li>
-    <li class="submenu-item" id="Biomedical"><a href="Biomedical.html">Biomedical</a></li>
-    <li class="submenu-item" id="Maintenance"><a href="Maintenance.html">Maintenance</a></li>
-    <li class="submenu-item" id="Pharmacy"><a href="Pharmacy.html">Pharmacy</a></li>
+  <ul class="submenu admin-submenu">
+    <li><a href="administration.html" class="submenu-item" id="Administration">Administration</a></li>
+    <li><a href="it.html" class="submenu-item" id="IT">IT</a></li>
+    <li><a href="hrd.html" class="submenu-item" id="HRD">HRD</a></li>
+    <li><a href="biomedical.html" class="submenu-item" id="Biomedical">Biomedical</a></li>
+    <li><a href="maintenance.html" class="submenu-item" id="Maintenance">Maintenance</a></li>
+    <li><a href="pharmacy.html" class="submenu-item" id="Pharmacy">Pharmacy</a></li>
   </ul>
 </li>
+
 
 
       <li><a href="#" data-content="dashboard">Dashboard</a></li>
