--- a/hrd/hrd.html
+++ b/hrd/hrd.html
@@ -1,1 +1,115 @@
-//***HRD html Goes here
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Employee Dashboard</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #e0e0e0; /* Light grey background */
+    }
+
+    nav {
+      background-color: #004d40; /* Dark green nav bar */
+      padding: 10px;
+    }
+
+    .menu {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+    }
+
+    .menu > li {
+      position: relative;
+      margin-right: 20px;
+    }
+
+    .menu > li > a {
+      color: #ffffff;
+      text-decoration: none;
+      padding: 10px 15px;
+      display: block;
+    }
+
+    .menu > li > a:hover {
+      background-color: #00695c;
+    }
+
+    .submenu {
+      display: none;
+      position: absolute;
+      background-color: #2e7d32; /* Darker green submenu */
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      min-width: 200px;
+      z-index: 999;
+      border-radius: 0 0 4px 4px;
+    }
+
+    .submenu li a {
+      color: white;
+      padding: 10px 15px;
+      display: block;
+      text-decoration: none;
+    }
+
+    .submenu li a:hover {
+      background-color: #43a047;
+    }
+
+    .menu > li:hover .submenu {
+      display: block;
+    }
+
+    #main-content {
+      padding: 20px;
+      background-color: #f5f5f5;
+      min-height: 600px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      background-color: #ffffff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+  </style>
+</head>
+<body>
+
+  <nav>
+    <ul class="menu">
+      <li>
+        <a href="#">Employee</a>
+        <ul class="submenu">
+          <li><a href="#" onclick="loadPage('user accounts.html')">User Accounts</a></li>
+          <li><a href="#" onclick="loadPage('employee details.html')">Employee Details</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">Leave Management</a>
+        <ul class="submenu">
+          <li><a href="#" onclick="loadPage('leave applications.html')">Leave Applications</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+
+  <div id="main-content">
+    <iframe id="content-frame" src=""></iframe>
+  </div>
+
+  <script>
+    function loadPage(page) {
+      document.getElementById('content-frame').src = page;
+    }
+  </script>
+
+</body>
+</html>
