--- a/dashboard.html
+++ b/dashboard.html
@@ -54,7 +54,7 @@
   <ul class="submenu admin-submenu">
     <li><a href="administration.html" class="submenu-item" id="Administration">Administration</a></li>
     <li><a href="it.html" class="submenu-item" id="IT">IT</a></li>
-    <li><a href="hrd.html" class="submenu-item" id="HRD">HRD</a></li>
+    <li><a href="/hrd/hrd.html" class="submenu-item" id="HRD">HRD</a></li>
     <li><a href="biomedical.html" class="submenu-item" id="Biomedical">Biomedical</a></li>
     <li><a href="maintenance.html" class="submenu-item" id="Maintenance">Maintenance</a></li>
     <li><a href="pharmacy.html" class="submenu-item" id="Pharmacy">Pharmacy</a></li>
