--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
       setTimeout(() => {
         if (window.innerWidth <= 768) {
-          window.location.href = "mobiledashboard.html"; // ✅ Mobile view
+          window.location.href = "dashboard.html"; // ✅ Mobile view
         } else {
           window.location.href = "dashboard.html"; // ✅ Desktop view
         }
