--- a/it/amc.html
+++ b/it/amc.html
@@ -1,1 +1,52 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>IT - AMC</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #e8f5e9;
+    }
+
+    header {
+      background-color: #1b5e20;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    main {
+      padding: 40px;
+      text-align: center;
+    }
+
+    h2 {
+      color: #1b5e20;
+    }
+
+    .card {
+      background-color: white;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      margin: 40px auto;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>IT Department - AMC</h1>
+  </header>
+
+  <main>
+    <div class="card">
+      <h2>AMC Module</h2>
+      <p>This section manages Annual Maintenance Contracts (AMCs) for IT infrastructure.</p>
+    </div>
+  </main>
+</body>
+</html>
