--- a/it/it.html
+++ b/it/it.html
@@ -26,34 +26,21 @@
 
     nav a {
       color: white;
-      margin: 0 20px;
       text-decoration: none;
+      margin: 0 20px;
       font-weight: bold;
       padding: 8px 16px;
       border-radius: 4px;
-      transition: background-color 0.3s;
     }
 
     nav a:hover {
       background-color: #388e3c;
     }
 
-    main {
-      padding: 40px;
-      text-align: center;
-    }
-
-    h2 {
-      color: #1b5e20;
-    }
-
-    .card {
-      background-color: white;
-      border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
-      margin: 40px auto;
+    iframe {
+      width: 100%;
+      height: calc(100vh - 120px);
+      border: none;
     }
   </style>
 </head>
@@ -63,17 +50,18 @@
   </header>
 
   <nav>
-    <a href="it/purchase.html">Purchase</a>
-    <a href="#">Service Request</a>
-    <a href="#">AMC</a>
-    <a href="#">PPM Schedule</a>
+    <a href="#" onclick="loadPage('it/purchase.html')">Purchase</a>
+    <a href="#" onclick="loadPage('it/service-request.html')">Service Request</a>
+    <a href="#" onclick="loadPage('it/amc.html')">AMC</a>
+    <a href="#" onclick="loadPage('it/ppm.html')">PPM Schedule</a>
   </nav>
 
-  <main>
-    <div class="card">
-      <h2>Welcome to the IT Department Dashboard</h2>
-      <p>Select a module from the menu above to begin managing your IT department tasks.</p>
-    </div>
-  </main>
+  <iframe id="content-frame" src="it/purchase.html"></iframe>
+
+  <script>
+    function loadPage(page) {
+      document.getElementById('content-frame').src = page;
+    }
+  </script>
 </body>
 </html>
