--- a/dashboard.html
+++ b/dashboard.html
@@ -53,11 +53,11 @@
   <a href="#">Admin</a>
   <ul class="submenu admin-submenu">
     <li><a href="administration.html" class="submenu-item" id="Administration">Administration</a></li>
-    <li><a href="it.html" class="submenu-item" id="IT">IT</a></li>
+    <li><a href="it/it.html" class="submenu-item" id="IT">IT</a></li>
     <li><a href="hrd/hrd.html" class="submenu-item" id="HRD">HRD</a></li>
-    <li><a href="biomedical.html" class="submenu-item" id="Biomedical">Biomedical</a></li>
-    <li><a href="maintenance.html" class="submenu-item" id="Maintenance">Maintenance</a></li>
-    <li><a href="pharmacy.html" class="submenu-item" id="Pharmacy">Pharmacy</a></li>
+    <li><a href="biomedical/biomedical.html" class="submenu-item" id="Biomedical">Biomedical</a></li>
+    <li><a href="maintenance/maintenance.html" class="submenu-item" id="Maintenance">Maintenance</a></li>
+    <li><a href="pharmac/pharmacy.html" class="submenu-item" id="Pharmacy">Pharmacy</a></li>
   </ul>
 </li>
 
