--- a/it/it.html
+++ b/it/it.html
@@ -13,8 +13,28 @@
     header {
       background-color: #1b5e20;
       color: white;
-      padding: 20px;
-      text-align: center;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .user-info {
+      font-size: 14px;
+    }
+
+    .logout-btn {
+      background-color: #c62828;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      margin-left: 10px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .logout-btn:hover {
+      background-color: #b71c1c;
     }
 
     nav {
@@ -46,7 +66,10 @@
 </head>
 <body>
   <header>
-    <h1>IT DEPARTMENT</h1>
+    <div><h2>IT DEPARTMENT</h2></div>
+    <div class="user-info" id="user-info">
+      <!-- User email will appear here -->
+    </div>
   </header>
 
   <nav>
@@ -60,20 +83,43 @@
 
   <script>
     const routes = {
-      "purchase": "it/purchase.html",
-      "service-request": "it/service-request.html",
-      "amc": "it/amc.html",
-      "ppm": "it/ppm.html"
+      "purchase": "purchase.html",
+      "service-request": "service-request.html",
+      "amc": "amc.html",
+      "ppm": "ppm.html"
     };
 
     function loadFromHash() {
       const hash = window.location.hash.replace('#', '');
-      const page = routes[hash] || "it/purchase.html";
-      document.getElementById('content-frame').src = page;
+      const page = routes[hash] || "purchase.html";
+      document.getElementById('content-frame').src = `it/${page}`;
     }
 
-    window.addEventListener('hashchange', loadFromHash);
-    window.addEventListener('DOMContentLoaded', loadFromHash);
+    function displayUserInfo() {
+      const userData = localStorage.getItem("user");
+      if (!userData) {
+        window.location.href = "index.html";
+        return;
+      }
+
+      const user = JSON.parse(userData);
+      const userInfo = document.getElementById("user-info");
+      userInfo.innerHTML = `
+        Logged in as: ${user.email}
+        <button class="logout-btn" onclick="logout()">Logout</button>
+      `;
+    }
+
+    function logout() {
+      localStorage.removeItem("user");
+      window.location.href = "index.html";
+    }
+
+    window.addEventListener("hashchange", loadFromHash);
+    window.addEventListener("DOMContentLoaded", () => {
+      displayUserInfo();
+      loadFromHash();
+    });
   </script>
 </body>
 </html>
